@@ -2,7 +2,9 @@ import torch
 from torch import nn
 
 from sp_adapters import SPLoPA
-from sp_adapters.splopa import SPLoPALinear
+from sp_adapters.splopa import _DEFAULT_INIT_RANGE, SPLoPALinear
+
+EPS = 1e-8
 
 
 def test_splopa():
@@ -30,7 +32,18 @@ def test_splopa():
     # Forwards are approx equal since adapters were initialized with near-zero values
     lin_out = lin.forward(x)
     splin_out = splin.forward(x)
-    assert torch.allclose(lin_out, splin_out, atol=1e-3)
+    assert torch.allclose(lin_out, splin_out, atol=_DEFAULT_INIT_RANGE * 10)
+
+    # # The tollerance is determined by the initialisation
+    splin2 = SPLoPA(
+        lin,
+        num_prototypes=num_prototypes,
+        block_shape=(p, q),
+        init_range=1e-6,
+        shared_prototypes=False,
+    )
+    splin2_out = splin2.forward(x)
+    assert torch.allclose(lin_out, splin2_out, atol=1e-6 * 10)
 
     # Train a bit
     mse = nn.MSELoss()
@@ -146,10 +159,12 @@ def test_conversion():
     assert torch.equal(net.seq[0].bias, anet.seq[0].bias)
 
     # Adapted weight close but not equal
-    assert torch.allclose(net.seq[0].weight, anet.seq[0].adapted_weight, atol=1e-4)
+    assert torch.allclose(
+        net.seq[0].weight, anet.seq[0].adapted_weight, atol=_DEFAULT_INIT_RANGE + EPS
+    )
     assert not torch.equal(net.seq[0].weight, anet.seq[0].adapted_weight)
 
-    assert torch.allclose(net.seq[0].bias, anet.seq[0].adapted_bias, atol=1e-4)
+    assert torch.allclose(
+        net.seq[0].bias, anet.seq[0].adapted_bias, atol=_DEFAULT_INIT_RANGE + EPS
+    )
     assert not torch.equal(net.seq[0].bias, anet.seq[0].adapted_bias)
-
-    # Conversion only handles
